--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://Ansha:Ansha329@cluster0.q6djf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=your_secret_key
+FRONTEND_URL=http://localhost:5173  # Change this in production
